# CoffeeStockTracker

./: .gitignore  .replit  app.py  auth.py  calendar_service.py  credentials.json  forms.py  google_auth.py  inventory.py  models.py  pyproject.toml  reports.py  revenue.py  routes.py  sales.py  staff.py  utils.py
attached_assets/: salescsv - Sheet1 (1).csv
instance/: coffee_inventory.db
static/: sample_sales.csv  sample_sales_multi_month.csv
static/css/: custom.css
static/js/: chart-config.js  main.js
templates/: alerts.html  base.html  categories.html  category_edit.html  dashboard.html  index.html  inventory_edit.html  inventory_list.html  inventory_transaction.html  login.html  register.html  reports.html  revenue_dashboard.html  sales_list.html  sales_report.html  sales_report_form.html  sales_upload.html  upload_sales.html  vendor_edit.html  vendors.html
templates/staff/: create.html  create_shift.html  dashboard.html  edit.html  edit_shift.html  google_calendar.html  list.html  schedule.html  shift_calendar.html  shift_form.html  shift_form.html.bak  shift_form.html.new  shift_form_new.html  shift_list.html  shifts.html  staff_form.html  staff_list.html  staff_shifts.html
